@@ -1,3 +1,7 @@
+2007-06-24  Hector E. Gomez Morales <hectoregm@gmail.com> 
+
+	* Test/TestDocumentBufferArchiver.cs: Minor changes in the tests.
+
 2007-06-23  Hector E. Gomez Morales <hectoregm@gmail.com> 
 
 	* Test/TestDocumentBufferArchiver.cs: Iterate over all XML files inside
